--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 </ol>
 <hr>
 <h2 id="projetodesenvolvido">Projeto desenvolvido</h2>
-<a href="https://github.com/Tha77es/Estudos/tree/main/Curso%20HTML-CSS/frontend/prova">Meu Artista Favorito</a>
+<a href="https://tha77es.github.io/meuartistafavorito/index.html">Meu Artista Favorito</a>
 
 <h2 id="contato">Contatos</h2>
  <p>Instagram: <a href="https://www.instagram.com/soares._07x/">@Soares._07x</a> <br>
