--- a/index.html
+++ b/index.html
@@ -58,7 +58,8 @@
 <a href="https://tha77es.github.io/meuartistafavorito/index.html">Meu Artista Favorito</a>
 
 <h2 id="contato">Contatos</h2>
- <p>Instagram: <a href="https://www.instagram.com/soares._07x/">@Soares._07x</a> <br>
+ <p> Email: <a href="https://mail.google.com/mail/u/0/?tab=rm&ogbl#inbox?compose=GTvVlcSBpszfCjhWMXmrHJNlGZMdrxJVWQhjGPRRHKcKhHhMkRQctxHFdCbsjwmbFNkkjmkTwkCXx">thallesoares2@gmail.com</a> <br>
+Instagram: <a href="https://www.instagram.com/soares._07x/">@Soares._07x</a> <br>
  Github: <a href="https://github.com/Tha77es">@Tha77es</a> <br>
  Whatsapp: <a href="https://wa.me/5531999490710">(31)999490710</a></p>
 </body>
